Fix card border z-index issue

--- a/_includes/css/components/play-card.css
+++ b/_includes/css/components/play-card.css
@@ -171,6 +171,7 @@
   border: 0.25rem solid var(--c-blue);
   border-radius: var(--radius-lg);
   filter: url("#tornEdge");
+  z-index: -1;
 }
 
 .play-card a {
